// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should match snapshot default 1`] = `
<body>
  <div>
    <select
      class="_atom_frm__base _atom_frm__select "
    >
      
    </select>
  </div>
</body>
`;

exports[`Select should match snapshot props 1`] = `
<body>
  <div>
    <select
      class="_atom_frm__base _atom_frm__select customCss"
      required=""
    >
      <option
        disabled=""
        value=""
      >
        Selecione
      </option>
      
      <option
        value="1"
      >
        Tadashi
      </option>
      <option
        value="2"
      >
        Takamoto
      </option>
      
    </select>
  </div>
</body>
`;
